--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>wedding_website</title>
+    <title>Mo & Sophie</title>
   </head>
   <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
     <script src="/path/to/vue.js"></script>
     <script src="/path/to/vue-router.js"></script>
+    <link href="//db.onlinewebfonts.com/c/2ed70bbaeeb682103949b4358616bedf?family=Morice+Straight+W03+Bold" rel="stylesheet" type="text/css"/>
   </body>
 </html>
