--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Michael&Sophie</title>
     <meta charset="utf-8">
-    <title>Mo & Sophie</title>
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  </head
+  
   <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
