Some routing and CSS tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title><%= htmlWebpackPlugin.options.title %></title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title><%= htmlWebpackPlugin.options.title %></title>
-  <link href="//db.onlinewebfonts.com/c/2ed70bbaeeb682103949b4358616bedf?family=Morice+Straight+W03+Bold"
-    rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-</body>
-
+  <body></body>
 </html>
