--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <title>Tying the Knot</title>
   </head>
 
-  <body><script type="text/javascript" src="/bundle.js"></script></body>
+  <body><script type="text/javascript" src="bundle.js"></script></body>
 </html>
