--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         font-display: swap;
       }
     </style>
+    <link
+      href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII="
+      rel="icon"
+      type="image/x-icon"
+    />
   </head>
 
   <body><script type="text/javascript" src="bundle.js"></script></body>
